--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-leaflet": "^3.0.0",
     "astro": "^4.15.3",
+    "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "framer-motion": "^11.11.9",
@@ -24,6 +28,7 @@
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.7",
     "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
     "react-swiper": "^0.1.5",
