--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-leaflet": "^3.0.0",
     "astro": "^4.15.3",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
